 - GBA Video: Fix Hblank timing
 - GBA Video: Fix mosaic objects drawing past the end (fixes mgba.io/i/1702)
 - GBA Video: Fix disabling OBJWIN in GL renderer (fixes mgba.io/i/1759)
 - GBA Video: Add missing parts of 256-color mode 0 mosaic (fixes mgba.io/1701)
 - GBA Video: Fix double-size OBJ wrapping in GL renderer (fixes mgba.io/1712)
Other fixes:
 - All: Improve export headers (fixes mgba.io/i/1738)
 - ARM Debugger: Clear low bit on breakpoint addresses (fixes mgba.io/i/1764)
 - CMake: Always use devkitPro toolchain when applicable (fixes mgba.io/i/1755)
 - Core: Ensure ELF regions can be written before trying
 - Core: Fix ELF loading regression (fixes mgba.io/i/1669)
 - Core: Fix crash modifying hash table entry (fixes mgba.io/i/1673)
 - GB Video: Fix some cases where SGB border doesn't draw to mutli-buffers
 - GBA: Reject incorrectly sized BIOSes
 - Debugger: Don't skip undefined instructions when debugger attached
 - Qt: Force OpenGL paint engine creation thread (fixes mgba.io/i/1642)
 - Qt: Fix OpenGL 2.1 support (fixes mgba.io/i/1678)
 - Qt: Fix static compilation in MinGW (fixes mgba.io/i/1769)
Misc:
 - 3DS: Clean up legacy initialization (fixes mgba.io/i/1768)
 - Debugger: Keep track of global cycle count
 - FFmpeg: Add looping option for GIF/APNG
 - GBA Serialize: Only flunk BIOS check if official BIOS was expected
 - Qt: Renderer can be changed while a game is running
 - Qt: Add hex index to palette view
 - Qt: Add transformation matrix info to sprite view
 - Qt: Disable Replace ROM option when no game loaded
 - Qt: Defer texture updates until frame is drawn (fixes mgba.io/i/1590)
 - Qt: Set icon for Discord Rich Presence

0.8.1: (2020-02-16)
Emulation fixes:
 - GB Serialize: Fix timing bug loading channel 4 timing
 - GBA: Fix multiboot entry point while skipping BIOS
 - GBA BIOS: Fix undefined instruction HLE behavior
 - GBA DMA: Fix invalid audio DMA parameters
 - GBA Memory: Misaligned SRAM writes are ignored